# MsgCenter

./: .cproject  .gitignore  .project  CMakeLists.txt  CmdTarget.cpp  CmdTarget.h  FrameCommon.cpp  FrameCommon.h  MFrame.h  MThread.cpp  MThread.h  MZmq.h  MsgCenter.cpp  MsgCenter.h  MsgClient.cpp  MsgClient.h  MsgCommon.h  MsgDefine.h  MsgPool.h  README.md  StandardHead.h
UnitTest/: CMakeLists.txt  MessageType.h  MobjectTest.cpp  TestMsgTarget1.h  TestMsgTarget2.h  TestMthread1.h  TestMthread2.h  main.cpp  testMessage.h  testMsgCenter.cpp  testMsgClient.cpp  testMthread.cpp  testSingleton.cpp  test_main.cpp
